tests/errors/record_missing_err/record_missing_err.c
#error record_missing_err:6:19 Record 'Point' must have fields: Y
